@@ -834,6 +834,20 @@ name|jackson
 operator|.
 name|node
 operator|.
+name|JsonNodeFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|codehaus
+operator|.
+name|jackson
+operator|.
+name|node
+operator|.
 name|ObjectNode
 import|;
 end_import
@@ -869,6 +883,20 @@ argument_list|<
 name|JobHistoryEvent
 argument_list|>
 block|{
+DECL|field|FACTORY
+specifier|private
+specifier|static
+specifier|final
+name|JsonNodeFactory
+name|FACTORY
+init|=
+operator|new
+name|ObjectMapper
+argument_list|()
+operator|.
+name|getNodeFactory
+argument_list|()
+decl_stmt|;
 DECL|field|context
 specifier|private
 specifier|final
@@ -6750,19 +6778,12 @@ name|Counters
 name|counters
 parameter_list|)
 block|{
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 name|ArrayNode
 name|nodes
 init|=
-name|mapper
+name|FACTORY
 operator|.
-name|createArrayNode
+name|arrayNode
 argument_list|()
 decl_stmt|;
 if|if
