@@ -576,6 +576,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|codehaus
+operator|.
+name|jackson
+operator|.
+name|map
+operator|.
+name|ObjectReader
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|google
@@ -613,6 +627,24 @@ operator|.
 name|getLog
 argument_list|(
 name|JobSubmitter
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+DECL|field|READER
+specifier|private
+specifier|static
+specifier|final
+name|ObjectReader
+name|READER
+init|=
+operator|new
+name|ObjectMapper
+argument_list|()
+operator|.
+name|reader
+argument_list|(
+name|Map
 operator|.
 name|class
 argument_list|)
@@ -2226,13 +2258,6 @@ decl_stmt|;
 try|try
 block|{
 comment|// read JSON
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 name|Map
 argument_list|<
 name|String
@@ -2241,7 +2266,7 @@ name|String
 argument_list|>
 name|nm
 init|=
-name|mapper
+name|READER
 operator|.
 name|readValue
 argument_list|(
@@ -2250,10 +2275,6 @@ name|File
 argument_list|(
 name|localFileName
 argument_list|)
-argument_list|,
-name|Map
-operator|.
-name|class
 argument_list|)
 decl_stmt|;
 for|for
