@@ -479,6 +479,9 @@ Release 2.8.0 - UNRELEASED
     MAPREDUCE-6473. Job submission can take a long time during Cluster
     initialization (Kuhu Shukla via jlowe)
 
+    MAPREDUCE-6626. Reuse ObjectMapper instance in MapReduce.
+    (Lin Yiqun via aajisaka)
+
   BUG FIXES
 
     MAPREDUCE-6314. TestPipeApplication fails on trunk.
